<resources>
    <string name="app_name" translatable="false">Pantrymind</string>
    <string name="inventory">Stock</string>
    <string name="me">Me</string>
    <string name="reminder">Alert</string>
    <string name="button_to_add_a_new_list">button to add a new list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="stock">Stock</string>
    <string name="lists">Lists</string>
    <string name="scan">Scan</string>
    <string name="alert">Alert</string>
    <string name="profile">Profile</string>
    <string name="my_loyalty_card">My loyalty card</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="my_profile">My Profile</string>
    <string name="tom_tom">Tom Tom</string>
    <string name="my_lists">My lists</string>
    <string name="my_inventory">My inventory</string>
    <string name="my_reminders">My reminders</string>
</resources>